test/Kubernetes.Tests/testassets/multiple-hosts/clusters.json
[
  {
    "ClusterId": "repro-1-service.foo:http",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {
      "http://10.244.1.11:80": {
        "Address": "http://10.244.1.11:80",
        "Health": null,
        "Metadata": null
      }
    },
    "Metadata": null,
    "Authentication": {}
  },
  {
    "ClusterId": "repro-2-service.foo:http",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {
      "http://10.244.2.22:80": {
        "Address": "http://10.244.2.22:80",
        "Health": null,
        "Metadata": null
      }
    },
    "Metadata": null,
    "Authentication": {}
  },
  {
    "ClusterId": "repro-3-service.foo:http",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {
      "http://10.244.3.33:80": {
        "Address": "http://10.244.3.33:80",
        "Health": null,
        "Metadata": null
      }
    },
    "Metadata": null,
    "Authentication": {}
  }
]
