test/Kubernetes.Tests/testassets/multiple-hosts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repro-1-ingress
  namespace: foo
spec:
  rules:
    - host: 'subdomain1.example.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: repro-1-service
                port:
                  name: http
    - host: 'subdomain2.example.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: repro-2-service
                port:
                  name: http
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: repro-3-service
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: repro-1-service
  namespace: foo
spec:
  selector:
    app: repro-1
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: repro-1-service
  namespace: foo
subsets:
  - addresses:
    - ip: 10.244.1.11
    ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: repro-2-service
  namespace: foo
spec:
  selector:
    app: repro-2
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: repro-2-service
  namespace: foo
subsets:
  - addresses:
    - ip: 10.244.2.22
    ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: repro-3-service
  namespace: foo
spec:
  selector:
    app: repro-2
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: repro-3-service
  namespace: foo
subsets:
  - addresses:
    - ip: 10.244.3.33
    ports:
    - name: http
      port: 80
      protocol: TCP
